--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "next": "13.3.2",
     "postcss": "8.4.23",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
