--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "next": "13.3.2",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.23",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
